--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,67 @@
-node_modules/
+dist/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+env/
+/Bot/venv*
+/Bot/.venv
+/Bot/build
+/Bot/dump
+/Bot/dist
+/Bot/gramaddict.egg-info
+/Bot/.idea
+/Bot/test
+/Bot/.vscode
+*/*.yml
+*/*.json
+*.pyc
+/Bot/.DS_Store
+Bot/crashes
+Bot/accounts
+Bot/!config-examples/*
+Bot/Pipfile
+Bot/Pipfile.lock
+*.pdf
+*.mp4
+*.log*
+*.ini
+*.db
+
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+accounts
+logs
+crashes
+test.sh
