--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx nodemon ./server.ts",
-    "lint": "npx eslint .",
+    "lint": "rm -rf dist/ && npx eslint .",
     "build": "tsc",
     "start": "node ./dist/server.js"
   },
