Removed some logs, added ability to start bulk processes. but better than last time

--- a/accounts/a.lvii/config.yml
+++ b/accounts/a.lvii/config.yml
@@ -9,7 +9,7 @@
 ##############################################################################
 
 username: a.lvii # you have to put your IG name here!
-password: Ledrivula1!
+password: asd
 device: R7AT30TZY2R
 app-id: com.instagram.android
 
