--- a/Bot/config-examples/telegram.yml
+++ b/Bot/config-examples/telegram.yml
@@ -2,5 +2,5 @@
 # telegram-api-token -> https://t.me/botfather to create your telegram bot account
 # telegram-chat-id -> https://t.me/myidbot to know your chat-id where the bot will send reports
 
-telegram-api-token: 6354500020:AAGbKeeqsZemTcDr8T0JOnknVUQETrp0FIM
-telegram-chat-id: 6229189190
+telegram-api-token: your-api-token-here
+telegram-chat-id: your-chat-id-here
