--- a/accounts/a.lvii/config.yml
+++ b/accounts/a.lvii/config.yml
@@ -9,7 +9,7 @@
 ##############################################################################
 
 username: a.lvii # you have to put your IG name here!
-password: asd
+password: Ledrivula1!
 device: R7AT30TZY2R
 app-id: com.instagram.android
 
@@ -30,7 +30,7 @@ change-source-if-crash: true
 relog-after-block: true
 relog-delay: 30
 shuffle-jobs: true
-truncate-sources: 2-5
+truncate-sources: 1
 
 ##############################################################################
 # Actions
@@ -51,7 +51,7 @@ hashtag-likers-top: ""
 # place-likers-recent: [place1, place2]
 # interact-from-file: [usernames1.txt 10-15, usernames2.txt 3]
 # posts-from-file: posts.txt
-feed: 2-5 # is the number of likes you will give in feed
+feed: 1 # is the number of likes you will give in feed
 # welcoming: 3-5 # welcoming new members with sentences in pm_welcome.txt inside account folder
 
 ## Special modifier for jobs and sources
@@ -64,11 +64,11 @@ mute-posts-after-follow: false
 mute-stories-after-follow: false
 
 ## Unfollow (unfollow jobs)
-unfollow: 10-20
-unfollow-any: 10-20
-unfollow-non-followers: "0"
-unfollow-any-non-followers: 10-20
-unfollow-any-followers: 10-20
+# unfollow: 0
+# unfollow-any: 0
+# unfollow-non-followers: "0"
+# unfollow-any-non-followers: 0
+# unfollow-any-followers: 0
 # unfollow-from-file: [usernames1.txt 7-15, usernames2.txt 6]
 
 ## Special modifier for unfollow jobs
@@ -95,7 +95,7 @@ telegram-reports: true # for using telegram-reports you have also to configure t
 ##############################################################################
 
 interactions-count: 30-40
-likes-count: 1-2
+likes-count: 1
 likes-percentage: 100
 stories-count: 1-2
 stories-percentage: 30-40
