--- a/accounts/a.lvii/config.yml
+++ b/accounts/a.lvii/config.yml
@@ -9,7 +9,7 @@
 ##############################################################################
 
 username: a.lvii # you have to put your IG name here!
-password: Ledrivula1!
+password: asd!
 device: R7AT30TZY2R
 app-id: com.instagram.android
 
@@ -37,11 +37,11 @@ truncate-sources: 1
 ##############################################################################
 
 ## Interaction (active jobs)
-blogger-followers: ""
+#blogger-followers: ""
 # blogger-following: [username1, username2]
 # blogger-post-likers: [username1, username2]
 # blogger: [username1, username2]
-hashtag-likers-top: ""
+#hashtag-likers-top: ""
 # hashtag-likers-recent: [hashtag1, hashtag2]
 # hashtag-posts-top: [hashtag1, hashtag2]
 # hashtag-posts-recent: [hashtag1, hashtag2]
@@ -51,7 +51,7 @@ hashtag-likers-top: ""
 # place-likers-recent: [place1, place2]
 # interact-from-file: [usernames1.txt 10-15, usernames2.txt 3]
 # posts-from-file: posts.txt
-feed: 1 # is the number of likes you will give in feed
+#feed: 1 # is the number of likes you will give in feed
 # welcoming: 3-5 # welcoming new members with sentences in pm_welcome.txt inside account folder
 
 ## Special modifier for jobs and sources
@@ -69,7 +69,7 @@ mute-stories-after-follow: false
 # unfollow-non-followers: "0"
 # unfollow-any-non-followers: 0
 # unfollow-any-followers: 0
-# unfollow-from-file: [usernames1.txt 7-15, usernames2.txt 6]
+unfollow-from-file: [unfollow.txt 6]
 
 ## Special modifier for unfollow jobs
 sort-followers-newest-to-oldest: false
